---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2025-11-18
  Changes:
    - Add fds_technology.add_effect for technology effects of any kind (does not check for duplicates)
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2025-06-19
  Bugfixes:
    - replace_ingredient and replace_result didn't actually remove the old element when the new ingredient already exists
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2025-06-08
  Changes:
    - Add fds_recipe.add_category function, requires engine version >=2.0.49 which is now stable, will otherwise do nothing
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-05-11
  Changes:
    - get_ingredient and get_result now return index first
  Minor Features:
    - Add new fds_technology functions: find, find_by_unlock, find_by_prereq
    - Add new fds_technology functions: has_prereq, has_prereq_recursive
    - Add fds_recipe.reorder_result
    - Add fds_general.hide_all_prototypes
    - Add new fds_assert functions
---------------------------------------------------------------------------------------------------
Version: 0.1.9
  Changes:
    - Set dependencies to empty
---------------------------------------------------------------------------------------------------
Version: 0.1.8
  Changes:
    - Add replace_prereq function
  Bugfixes:
    - Fix crash if prerequisites isn't valid
---------------------------------------------------------------------------------------------------
Version: 0.1.7
  Changes:
    - Remove assert if original ingredient/result in a replace function doesn't exist